--- a/photoAlbum/app/src/main/res/layout/activity_main.xml
+++ b/photoAlbum/app/src/main/res/layout/activity_main.xml
@@ -12,11 +12,13 @@
         android:layout_width="match_parent"
         android:layout_height="120dp">
     <ImageView
+        android:id="@+id/image_1"
         android:src="@drawable/test1"
         android:layout_width="200dp"
         android:layout_height="100dp"/>
 
     <ImageView
+        android:id="@+id/image_2"
         android:src="@drawable/test2"
         android:layout_width="200dp"
         android:layout_height="100dp"/>
@@ -26,11 +28,13 @@
         android:layout_width="match_parent"
         android:layout_height="120dp">
     <ImageView
+        android:id="@+id/image_3"
         android:src="@drawable/test3"
         android:layout_width="200dp"
         android:layout_height="100dp"/>
 
     <ImageView
+        android:id="@+id/image_4"
         android:src="@drawable/test4"
         android:layout_width="200dp"
         android:layout_height="100dp"/>
@@ -40,6 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="120dp">
     <ImageView
+        android:id="@+id/image_5"
         android:src="@drawable/test5"
         android:layout_width="200dp"
         android:layout_height="100dp"/>
