--- a/dice/app/src/main/res/values/themes.xml
+++ b/dice/app/src/main/res/values/themes.xml
@@ -3,6 +3,7 @@
     <style name="Base.Theme.Dice" parent="Theme.AppCompat.Light">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="windowNoTitle">true</item>
     </style>
 
     <style name="Theme.Dice" parent="Base.Theme.Dice" />
